--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "http-errors": "~1.6.3",
     "jest": "^26.0.1",
     "morgan": "~1.9.1",
+    "sha256": "^0.2.0",
     "ws": "^7.3.0"
   }
 }
