--- a/package.json
+++ b/package.json
@@ -1,23 +1,43 @@
 {
-  "name": "nodechain",
-  "version": "0.0.0",
+  "name": "react-blockchain",
+  "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "nodemon ./bin/www",
-    "start": "node ./bin/www",
-    "test": "jest --watchAll"
-  },
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "cookie-parser": "~1.4.4",
+    "@ant-design/icons": "^4.2.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.10",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "antd": "^4.3.2",
+    "bootstrap": "^4.5.0",
     "crypto-js": "^4.0.0",
-    "debug": "~2.6.9",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "jest": "^26.0.1",
-    "morgan": "~1.9.1",
-    "sha256": "^0.2.0",
-    "ws": "^7.3.0"
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.1",
+    "sha256": "^0.2.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
